# la-tools

./: Cargo.toml
extract-git-object/: Cargo.toml
extract-git-object/src/: lib.rs  main.rs
fast-dl/: Cargo.toml
fast-dl/src/: io_mgr.rs  lib.rs  main.rs
hash-git-object/: Cargo.toml
hash-git-object/src/: lib.rs  main.rs
la-tools/: Cargo.toml
la-tools-multi/: Cargo.toml
la-tools-multi/src/: lib.rs  main.rs
la-tools/src/: git_index.rs  git_object.rs  lib.rs
make-git-object/: Cargo.toml
make-git-object/src/: lib.rs  main.rs
patch-git-index/: Cargo.toml
patch-git-index/src/: lib.rs  main.rs
