[package]
name = "fast-dl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4" }
la-tools = { path = "../la-tools" }
reqwest = { version = "0.11" }
tokio = { features = ["full"], version = "1.10" }
