[package]
name = "la-tools-multi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extract-git-object = { path = "../extract-git-object" }
hash-git-object = { path = "../hash-git-object" }
make-git-object = { path = "../make-git-object" }
patch-git-index = { path = "../patch-git-index" }
