[package]
name = "la-tools"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.4" }
flate2 = { version = "1.0" }
sha-1 = { version = "0.9" }
static_assertions = { version = "1.1" }
zerocopy = { version = "0.5" }
